# Serialpp

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
examples/: CMakeLists.txt  serial_example_(ampel).cpp  tcp_client.cpp  tcp_server.cpp
include/: Serial.hpp  Socket.hpp
src/: Serial.cpp  Socket.cpp
